objects/Patient__c.object
<CustomObject>
    <description>list of patients</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>YH-{00000}-{MM}-{YYYY}</displayFormat>
        <label>Patient Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wheelchair</fullName>
                </value>
                <value>
                    <fullName>ExtraMatress</fullName>
                </value>
                <value>
                    <fullName>Stretcher</fullName>
                </value>
                <value>
                    <fullName>Ambulance</fullName>
                </value>
                <value>
                    <fullName>AcRoom</fullName>
                </value>
                <value>
                    <fullName>Non AcRoom</fullName>
                </value>
                <value>
                    <fullName>Dedicated Nurse</fullName>
                </value>
                <value>
                    <fullName>Deluxe Room</fullName>
                </value>
                <value>
                    <fullName>Wifi</fullName>
                </value>
                <value>
                    <fullName>Non Veg Meals</fullName>
                </value>
                <value>
                    <fullName>Veg Meals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Registration_Fee_Paid__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Gyno</fullName>
                </value>
                <value>
                    <fullName>Ortho</fullName>
                </value>
                <value>
                    <fullName>Neuro</fullName>
                </value>
                <value>
                    <fullName>Cediology</fullName>
                </value>
                <value>
                    <fullName>Dermatao</fullName>
                </value>
                <value>
                    <fullName>Ent</fullName>
                </value>
                <value>
                    <fullName>Gastro</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rbc_percent__c</fullName>
        <description>enter patient rbc count</description>
        <label>rbc percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <defaultValue>&apos;no@email.com&apos;</defaultValue>
        <externalId>true</externalId>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient_Mobile__c</fullName>
        <label>Patient Mobile</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_detail__c</fullName>
        <label>contact detail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Fee__c</fullName>
        <defaultValue>300</defaultValue>
        <label>Registration Fee</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Date_Birth__c</fullName>
        <label>Patient Date Birth</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <description>To capture patient name</description>
        <externalId>true</externalId>
        <label>Patient First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Fee_Paid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Registration Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Instagram_Link__c</fullName>
        <label>Patient Instagram Link</label>
        <type>Url</type>
    </fields>
    <recordTypes>
        <fullName>Emergency</fullName>
        <active>true</active>
        <label>Emergency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Normal_Paient</fullName>
        <active>true</active>
        <label>Normal Paient</label>
    </recordTypes>
    <validationRules>
        <fullName>rbc_6</fullName>
        <active>true</active>
        <errorConditionFormula>rbc_percent__c    &lt;   0.06</errorConditionFormula>
        <errorMessage>rbc shoud be grater than 6</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fess_should_be_400</fullName>
        <active>true</active>
        <errorConditionFormula>Registration_Fee__c   &lt;  400</errorConditionFormula>
        <errorMessage>fees should be grater than 400</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>contact_details_is_must</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   ISBLANK (contact_detail__c)
   
)</errorConditionFormula>
        <errorMessage>cant save without contact details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>patient_email_cant_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(  Patient_Email__c )</errorConditionFormula>
        <errorMessage>email cant be updated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_within_current_month_and_year</fullName>
        <active>true</active>
        <errorConditionFormula>OR (
YEAR(  Registration_Date__c  ) &lt;&gt; YEAR ( TODAY() ),
MONTH(  Registration_Date__c  ) &lt;&gt; MONTH ( TODAY() )
)</errorConditionFormula>
        <errorMessage>Date must be in the current month.</errorMessage>
    </validationRules>
</CustomObject>